# dpay_test

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
dpay_test/: apps.py  payment.py  urls.py  views.py
dpay_test/locale/de_Informal/LC_MESSAGES/: django.po
dpay_test/templates/dpay_test/: payment.html
